@@ -4,27 +4,22 @@ package Station;
  *
  * @author Sotiris Karapostolakis
  */
+
 import Events.DisChargingEvent;
 import Events.ChargingEvent;
-import java.util.LinkedList;
+import java.util.ArrayList;
 
-public class Queue
+public class WaitList
 {
-    private LinkedList<ChargingEvent> list1;
-    private LinkedList<DisChargingEvent> list2;
+    private ArrayList<ChargingEvent> list1;
+    private ArrayList<DisChargingEvent> list2;
 
-    /**
-     * Constructor of Queue class.
-     * @param n The kind of queue. If "charging" it creates a list to store 
-     * ChargingEvent objects. If "discharging" it creates a list to store 
-     * DisChargingEvent objects.
-      */
-    public Queue(String n)
+    public WaitList(String n)
     {
         if ("charging".equals(n))
-            list1 = new LinkedList<ChargingEvent>();
+            list1 = new ArrayList<ChargingEvent>();
         else if ("discharging".equals(n))
-            list2 = new LinkedList<DisChargingEvent>();
+            list2 = new ArrayList<DisChargingEvent>();
     }
 
     /**
@@ -42,7 +37,7 @@ public class Queue
      * @param index The place of the DisChargingEvent in the list.
      * @return The DisChargingEvent object.
      */
-    public final DisChargingEvent get(int index)
+    public DisChargingEvent get(int index)
     {
         return list2.get(index);
     }
@@ -52,9 +47,9 @@ public class Queue
      * @param p The ChargingEvent to be inserted.
      * @return True if the insertion was successfull, false if it was not.
      */
-    public final boolean insertElement(ChargingEvent p)
+    public void insertElement(ChargingEvent p)
     {
-        return list1.add(p);
+        list1.add(p);
     }
 
     /**
@@ -62,7 +57,7 @@ public class Queue
      * @param m The ChargingEvent to be deleted.
      * @return True if the deletion was successfull, false if it was not.
      */
-    public final boolean deleteElement(ChargingEvent m)
+    public boolean deleteElement(ChargingEvent m)
     {
         return list1.remove(m);
     }
@@ -71,25 +66,27 @@ public class Queue
      * Returns the first ChargingEvent of the list.
      * @return The first ChargingEvent.
      */
-    public final ChargingEvent takeFirst()
+    public ChargingEvent takeFirst()
     {
-        return list1.getFirst();
+        return list1.get(0);
     }
 
     /**
      * Removes the first ChargingEvent.
      * @return True if the deletion was successfull, false if it was not.
      */
-    public final ChargingEvent removeFirst()
+    public ChargingEvent removeFirst()
     {
-        return list1.removeFirst();
+        ChargingEvent e = list1.get(0);
+        list1.remove(0);
+        return e;
     }
 
     /**
      * Returns the size of the list for the ChargingEvent.
      * @return The size of ChargingEvent list.
      */
-    public final int reSize()
+    public int reSize()
     {
         return list1.size();
     }
@@ -99,9 +96,9 @@ public class Queue
      * @param p The DisChargingEvent to be inserted.
      * @return True if the insertion was successfull, false if it was not.
      */
-    public final boolean insertElement(DisChargingEvent p)
+    public void insertElement(DisChargingEvent p)
     {
-        return list2.add(p);
+        list2.add(p);
     }
 
     /**
@@ -109,7 +106,7 @@ public class Queue
      * @param m The DisChargingEvent to be deleted.
      * @return True if it was successfull, false if it was not.
      */
-    public final boolean deleteElement(DisChargingEvent m)
+    public boolean deleteElement(DisChargingEvent m)
     {
         return list2.remove(m);
     }
@@ -118,46 +115,52 @@ public class Queue
      * Returns the first DisChargingEvent of the list.
      * @return The first DisChargingEvent of the list.
      */
-    public final DisChargingEvent reFirst()
+    public DisChargingEvent reFirst()
     {
-        return list2.getFirst();
+        return list2.get(0);
     }
 
     /**
      * Removes the first DisChargingEvent of the list.
      * @return True if it was successfull, false if it was not.
      */
-    public final DisChargingEvent moveFirst()
+    public DisChargingEvent moveFirst()
     {
-        return list2.removeFirst();
+        DisChargingEvent e = list2.get(0);
+        list2.remove(0);
+        return e;
     }
 
     /**
      * Returns the size of the DisChargingEvent list.
      * @return The size of the DisChargingEvent list.
      */
-    public final int rSize()
+    public int rSize()
     {
         return list2.size();
     }
-    
+
     /**
      * Removes the ChargingEvent in the given position.
      * @param index The position of the ChargingEvent.
      * @return True if the deletion was successfull, false if it was not.
      */
-    public final ChargingEvent removeChargingEvent(int index)
+    public ChargingEvent removeChargingEvent(int index)
     {
-        return list1.remove(index);
+        ChargingEvent e = list1.get(index);
+        list1.remove(index);
+        return e;
     }
-    
+
     /**
      * Removes the DisChargingEvent int he given position.
      * @param index The position of the DisChargingEvent.
      * @return True if the deletion was successfull, false if it was not.
      */
-    public final DisChargingEvent removeDisChargingEvent(int index)
+    public DisChargingEvent removeDisChargingEvent(int index)
     {
-        return list2.remove(index);
+        DisChargingEvent e = list2.get(index);
+        list2.remove(index);
+        return e;
     }
 }
